[package]
name = "rhttp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
chrono = "0.4.42"
flutter_rust_bridge = { version = "=2.11.1", features = ["chrono"] }
futures-util = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }
webpki-roots = "0.26"
rustls-pemfile = "2.1"

[dependencies.reqwest]
version = "0.13.1"
path = "../../reqwest"
default-features = false
features = [
    "charset",
    "cookies",
    "http2",
    "http3",
    "stream",
    "multipart",
    "socks",
    "rustls-no-provider",
    "__rustls-ring",

    # Compression
    "brotli",
    "gzip",
    "json",
    "form",
    "query",
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.release]
opt-level = 3
strip = true
panic = "abort"
lto = true
codegen-units = 1

[profile.dev]
opt-level = 3
panic = "abort"
